--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
 </head>
 <body>
     <header>
-        <h1>INFORME DE INSPECCIÓN(Formulario aplicable en Inspecciones Extraordinarias)</h1>
-        <span>FORMULARIO A/1 – R.G PNA 3-036</span>
-        <nav class="nav activo">
-            <ul>
-                <li><a href="#">Explora</a></li>
-                <li><a href="#">Detalles</a></li>
-                <li><a href="#">Item3</a></li>
-                <li><a href="#">Item4</a></li>
-                <li><a href="#">Item5</a></li>
-            </ul>
-        </nav>
+
+    <div class="container_logo">
+        <div class="logo2">
+            <img class="imgMin" src="./img/imgMinisterio.png" alt="imagenPNA">
+        </div>
+        <div class="logo2">
+            <img src="./img/pna.png" alt="imagenPNA">
+            <div class="logoPna">
+                <p class="prefectura">PREFECTURA</p>
+                <p>NAVAL ARGENTINA</p>
+            </div>
+        </div>
+    </div>    
+    <span class="form">FORMULARIO A/1 – R.G PNA 3-036</span>
     </header>
+    <div class="tituloPrincipal">
+        <h1>INFORME DE INSPECCIÓN</h1>
+        <h3>(Formulario aplicable en Inspecciones Extraordinarias)</h3>
+    </div>
+
     <h3>DETALLE DEL BUQUE:</h3>
     <form id="buscador" >
     <div class="datosDelBuque">
@@ -150,7 +158,7 @@
             </div>
         </div>
 
-
+<br><br>
         <div><h3>.16 Certificados y Documentación:</h3></div>
             <div class="certificados">    
                 <div>a) Título</div>
